# athir

./: .gitignore  Cargo.toml  README.md
src/: alloc.rs  athir.scm  banner  builtins.rs  env.rs  error.rs  eval.rs  gc.rs  main.rs  object.rs  print.rs  read.rs  repl.rs  result.rs  stdlib.rs  syntax.rs  value.rs
src/alloc/: mod.rs
src/env/: mod.rs
src/eval/: builtins.rs  env.rs  mod.rs  tests.rs
src/lexer/: mod.rs  number.rs  tests.rs  token.rs
src/object/: boolean.rs  bytevector.rs  character.rs  env.rs  error.rs  keyword.rs  lambda.rs  map.rs  mod.rs  number.rs  pair.rs  port.rs  procedure.rs  string.rs  symbol.rs  vector.rs
src/parser/: mod.rs  parsetree.rs  tests.rs
src/read/: error.rs  expr.rs  lexer.rs  mod.rs  node.rs  tests.rs
src/read/lexer/: delimited.rs  mod.rs  number.rs  source.rs  tests.rs  token.rs
src/read/lexer/token/: number.rs
src/read/lexer/token/number/: decimal.rs  nondecimal.rs
src/read/parser/: mod.rs  parsetree.rs  tests.rs
src/stdlib/: base.rs  cxr.rs  mod.rs
src/tools/: mod.rs  regex_gen.rs
src/tools/lexeme_gen/: identifier.rs  mod.rs  number.rs  randomizable.rs
src/value/: mod.rs  number.rs  port.rs  procedure.rs  syntax.rs  transformer.rs
src/value/number/: real.rs  tests.rs
